# Ray

./: .gitignore  .gitmodules  AreaLight.cpp  BVH.cpp  CMakeLists.txt  Camera.cpp  Config.cpp  Dielectric.cpp  GLUtil.cpp  Hittable.cpp  HittableList.cpp  HittableList.h  IllumModelFactory.cpp  InstantRadiosity.cpp  KDTree.cpp  Lambertian.cpp  Light.cpp  Material.cpp  Phong.cpp  Photon.cpp  Pipeline.cpp  README.md  Ray.cpp  Scene.cpp  Shader.cpp  Sphere.cpp  Texture.cpp  Triangle.cpp  TriangleGroup.cpp  Utility.cpp  Whitted.cpp  appveyor.yml  install.bat  install_dependency.bat  install_dependency.sh  main.cpp
config/: hw2_input.txt  input_cornell.txt  input_cornell.yml  input_cornell_ambient_occlusion_volume.yml  input_cornell_ao.yml  input_cornell_deffered.yml  input_cornell_phong.yml  input_cornell_pm.txt  input_cornell_ssao_deffered.yml  input_cornell_whitted.yml  input_cornell_whitted_area.yml  input_cornell_whitted_gpu.yml  input_monkey.txt  input_monkey_with_texture.txt  input_monkey_with_texture_pm.txt  input_scene_suggested_contour.yml  input_simple_path_trace.yml  input_simple_path_trace_gpu.yml  input_simple_path_trace_gpu_debug.yml  input_simple_path_trace_gpu_debug_clean.yml  input_simple_whitted_gpu.yml
docs/P1 Scenes/P1 Scenes/P1 Scenes/Example Scenes/: sibenikSceneData1.cpbrt  sibenikSceneData2.cpbrt
docs/P1 Scenes/P1 Scenes/P1 Scenes/Example Scenes/pbrt-exe/: cornell-whitted.pbrt  killeroo-whitted-glass.pbrt  sibenik-whitted.pbrt  使用說明.txt
docs/P1 Scenes/P1 Scenes/P1 Scenes/Example Scenes/pbrt-exe/geometry/: cornell-whitted.pbrt
docs/P1 Scenes/P1 Scenes/P1 Scenes/Example Scenes/scene/: cornell.blend  cornell.fbx  sibenik.fbx
include/: AmbientOcclusion.h  AmbientOcclusionVolumeShadingPipeline.h  Application.h  AreaLight.h  AssimpAdapter.h  BLASNode.h  BVH.h  Camera.h  Config.h  Context.h  DefferedShadingPipeline.h  Dielectric.h  GLPanel.h  GLUtil.h  GeometryGroupObj.h  GroupBVHTranslator.h  GroupObj.h  Hittable.h  HittableList.h  IllumModel.h  IllumModelFactory.h  InstantRadiosity.h  KDTree.h  Lambertian.h  Light.h  MainFrame.h  Material.h  ONB.h  ObjectNode.h  PathTrace.h  Phong.h  PhongShadingPipeline.h  Photon.h  Pipeline.h  PipelineFactory.h  Ray.h  SSAODefferedShadingPipeline.h  Scene.h  SelectorObj.h  Shader.h  (+13 more)
include/glad/: glad.h
resource/model/: box_scene.mtl  box_with_monkey.blend  fertility.obj.txt  untitled.blend1  with_texture.blend
resource/model/cornell/: box_top.mtl  box_with_monkey.blend
resource/model/sibenik/: camera.mtl  cornell.blend  cylinder.mtl  plane001.mtl  sibenik.mtl
resource/shader/: deffered_gbuffer.fs  mesh.fs  ssao_deffered_ao_shading.fs  ssao_deffered_shading.fs
resource/shader/local_shading/: ambient_occlusion_volume_bounding.fs  ambient_occlusion_volume_bounding.gs  ambient_occlusion_volume_bounding.vs  ambient_occlusion_volume_bounding_test.gs  ambient_occlusion_volume_deffered_gbuffer.fs  ambient_occlusion_volume_deffered_gbuffer.vs  ambient_occlusion_volume_deffered_shading.fs  deffered_shading.fs  deffered_shading.vs  mesh.fs  ssao_deffered_ao_shading.fs  ssao_deffered_gbuffer.fs  ssao_deffered_gbuffer.vs  ssao_deffered_shading.fs  suggested_contour.fs  suggested_contour.vs
resource/shader/ray_tracing_shading/: path_tracing.cs  screen_shading.fs  screen_shading_divide.fs  whitted_tracing.cs
resource/shader/ray_tracing_shading/common/: closest_hit.glsl  globals.glsl  intersection.glsl  ssbo.glsl  uniforms.glsl
shader/: mesh.fs
src/: AmbientOcclusion.cpp  AmbientOcclusionVolumeShadingPipeline.cpp  AreaLight.cpp  BLASNode.cpp  BVH.cpp  Camera.cpp  Config.cpp  Context.cpp  DefferedShadingPipeline.cpp  Dielectric.cpp  GLPanel.cpp  GLUtil.cpp  GeometryGroupObj.cpp  GroupBVHTranslator.cpp  GroupObj.cpp  Hittable.cpp  HittableList.cpp  InstantRadiosity.cpp  Lambertian.cpp  Light.cpp  MainFrame.cpp  Material.cpp  ONB.cpp  PathTrace.cpp  PhongShadingPipeline.cpp  Photon.cpp  Pipeline.cpp  PipelineFactory.cpp  Ray.cpp  SSAODefferedShadingPipeline.cpp  Scene.cpp  SelectorObj.cpp  Shader.cpp  ShaderProgram.cpp  Sphere.cpp  SuggestedContourPipeline.cpp  Texture.cpp  Timer.cpp  TransformObj.cpp  Triangle.cpp  (+5 more)
